# posti-GIS-practical

./: .gitignore  README.md  mapping.html  mapping.ipynb  pyproject.toml
data/: alphabet.json
