[project]
name = "posti-gis-practical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "osmnx>=2.0.6",
    "pip>=25.2",
    "six>=1.17.0",
]
